# EuropaTools

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
cmake/: CompilerFlags-GNU.cmake  CompilerFlags.cmake  Policies.cmake  ProjectFuncs.cmake
datadoc/: msh.md  pak.md  tex.md
datadoc/imhex/: c3po.hexpat  msh.hexpat  pak.hexpat  yatf.hexpat
datadoc/mrp/: mesh_researcher_pro_msh.py
doc/: eupak.md  eutex.md
hexpat/: mesh_researcher_pro_msh.py  msh.hexpat  pak.hexpat  yatf.hexpat
include/europa/base/: MoveOnlyAny.hpp  VirtualFileSystem.hpp
include/europa/io/: PakFile.h  PakFile.hpp  PakProgressReportSink.hpp  PakReader.h  PakReader.hpp  PakWriter.h  PakWriter.hpp  Value.hpp  YatfReader.h  YatfReader.hpp
include/europa/io/c3po/: ClassInfo.hpp
include/europa/io/pak/: File.hpp  Reader.hpp  Writer.hpp  WriterProgressReportSink.hpp
include/europa/io/yatf/: Reader.hpp
include/europa/structs/: ImHexAdapter.h  ImHexAdapter.hpp  MathTypes.hpp  Pak.h  Pak.hpp  Value.hpp  Yatf.h  Yatf.hpp
include/europa/util/: AlignHelpers.hpp  DllExport.hpp  FixedString.h  FixedString.hpp  FourCC.h  FourCC.hpp  ImageSurface.hpp  Into.hpp  Overloaded.hpp  RelocatabilityMarkers.hpp  TupleElement.h  TupleElement.hpp  UniqueArray.hpp  UsefulConstants.hpp
src/libeuropa/: CMakeLists.txt
src/libeuropa/base/: HostVirtualFileSystem.posix.cpp  MoveOnlyAny.cpp  VirtualFileSystem.cpp  VirtualFileSystem_Host.cpp
src/libeuropa/io/: PakFile.cpp  PakReader.cpp  PakWriter.cpp  StreamUtils.cpp  StreamUtils.h  Value.cpp  YatfReader.cpp
src/libeuropa/io/pak/: Reader.cpp  Writer.cpp
src/libeuropa/io/yatf/: Reader.cpp
src/libeuropa/util/: ImageSurface.cpp
src/tools/: CMakeLists.txt  europa_pack_extractor.cpp  jsfscramble.cpp  pakcreate.cpp  paktest.cpp  texdump.cpp  toollib_test.cpp  toollib_test_cmd.cpp  vfs_test.cpp
src/tools/eupak/: CMakeLists.txt  CommonDefs.hpp  CreateCommand.cpp  EupakConfig.hpp.in  ExtractCommand.cpp  InfoCommand.cpp  ListCommand.cpp  ManifestJSON.hpp  Utils.cpp  Utils.hpp  main.cpp
src/tools/eupak/tasks/: CreateTask.cpp  CreateTask.hpp  ExtractTask.cpp  ExtractTask.hpp  InfoTask.cpp  InfoTask.hpp  Task.cpp  Task.hpp
src/tools/eutex/: CMakeLists.txt  CommonDefs.hpp  DumpCommand.cpp  EutexConfig.hpp.in  main.cpp
src/tools/toollib/: CMakeLists.txt  README.md  ToolCommand.cpp  ToolMain.cpp
src/tools/toollib/toollib/: ToolCommand.hpp  ToolMain.hpp
tools/: format.sh  winpkg.sh
